--- a/app/src/main/res/layout/fragment_visualizar_debito.xml
+++ b/app/src/main/res/layout/fragment_visualizar_debito.xml
@@ -4,7 +4,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.cliente.debito.LancamentosDebitoFragment">
+        tools:context=".activities.contaPagarReceber.LancamentosDebitoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
