--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,16 @@
                 android:title="Clientes"/>
 
         <item
+                android:id="@+id/nav_fornecedores"
+                android:icon="@drawable/account_black_24dp"
+                android:title="Fornecedores"/>
+
+        <item
+                android:id="@+id/nav_balancete"
+                android:icon="@drawable/tag_plus_white_24dp"
+                android:title="Balancete"/>
+
+        <item
                 android:id="@+id/nav_departamento"
                 android:icon="@drawable/shape_white_24dp"
                 android:title="Departamentos"/>
